force-app/main/default/objects/Interview__c/Interview__c.object-meta.xml
<CustomObject>
    <description>An interview is a conversation beetwen speaker and interviewer to measure speakere knowledge.</description>
    <label>Interview</label>
    <nameField>
        <displayFormat>IN-{0000}</displayFormat>
        <label>Interview Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>