force-app/main/default/objects/Interview__c/fields/Accepting__c.field-meta.xml
<CustomField>
    <fullName>Accepting__c</fullName>
    <label>Accepting</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accept</fullName>
                <color>#419249</color>
                <label>Accept</label>
            </value>
            <value>
                <fullName>Not Accept</fullName>
                <color>#A53711</color>
                <label>Not Accept</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>