force-app/main/default/objects/Interview__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>When interview take place.</description>
    <label>Date</label>
    <type>DateTime</type>
</CustomField>