force-app/main/default/objects/Interview__c/fields/Hiring__c.field-meta.xml
<CustomField>
    <fullName>Hiring__c</fullName>
    <label>Hiring</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hire</fullName>
            </value>
            <value>
                <fullName>Not Hire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>