force-app/main/default/objects/Interview__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Set Interview</fullName>
            </value>
            <value>
                <fullName>Hold an Interview</fullName>
            </value>
            <value>
                <fullName>Wait Reviews</fullName>
            </value>
            <value>
                <fullName>Accepting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>